2011-09-29 Otavio Pontes <obusatto@br.ibm.com>

	Related to bug #353056
	* META-INF/MANIFEST.MF: Require org.eclipse.linuxtools.tools.launch.core
	* src/org/eclipse/linuxtools/internal/valgrind/core/ValgrindCommand.java:
	Using factories from org.eclipse.linuxtools.tools.launch.core to run
	valgrind command.

2011-09-28 Otavio Pontes <obusatto@br.ibm.com>

	Related to bug #353056
	* src/org/eclipse/linuxtools/internal/valgrind/core/ValgrindCommand.java:
	Removing dependency for ValgrindPreferencePage
	* src/org/eclipse/linuxtools/internal/valgrind/core/ValgrindPlugin.java: 
	Removing dependency for ValgrindPreferencePage
	* src/org/eclipse/linuxtools/internal/valgrind/core/ValgrindPreferencePage.java:
	Removing this preference page. This page is not longer needed because we will be
	able to set the linuxtools PATH environment variable in Project Properties.

2011-10-18  Jeff Johnston  <jjohnstn@redhat.com>

	* META-INF/MANIFEST.MF: Hide internal package except from other Valgrind plug-ins.

2011-10-17  Jeff Johnston  <jjohnstn@redhat.com>

	Bug #360950
	* src/org/eclipse/linuxtools/internal/valgrind/core/ValgrindPlugin.java (initializeDefaultPreferences): Add
	future support for Windows.

2011-10-07  Roland Grunberg  <rgrunber@redhat.com>

	* src/org/eclipse/linuxtools/internal/valgrind/core/ValgrindCoreParser.java
		(ValgrindCoreParser): Handle output resulting from insufficient memory. BZ# 360225.

2011-01-06  Elliott Baron  <ebaron@fedoraproject.org>

	Bug #333640
	* src/org/eclipse/linuxtools/internal/valgrind/core/LaunchConfigurationConstants.java (ATTR_GENERAL_DSYMUTIL): Added dsymutil option.
	(DEFAULT_GENERAL_DSYMUTIL): Likewise.

2010-09-13  Elliott Baron  <ebaron@fedoraproject.org>

	* src/org/eclipse/linuxtools/internal/valgrind/core/ValgrindCoreParser.java (ValgrindCoreParser): Handle
	warning messages.

2010-08-03  Elliott Baron  <ebaron@fedoraproject.org>

	* src/org/eclipse/linuxtools/internal/valgrind/core/AbstractValgrindTextParser.java: Removed.