@@ -1,13 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <?eclipse version="3.4"?>
 <plugin>
-   <extension
-         point="org.eclipse.ui.preferencePages">
-      <page
-            class="org.eclipse.linuxtools.internal.valgrind.core.ValgrindPreferencePage"
-            id="org.eclipse.linuxtools.valgrind.internal.core.ValgrindPreferencePage"
-            name="%page.name">
-      </page>
-   </extension>
 
 </plugin>
