@@ -1,6 +1,1 @@
 AbstractValgrindTextParser.Parsing_output_failed=Parsing output failed on line: {0}
-ValgrindPreferencePage.Binary_path=Location of Valgrind binary:
-ValgrindPreferencePage.Browse_button=&Browse...
-ValgrindPreferencePage.Button_Enable_Valgrind=Enable Valgrind Integration
-ValgrindPreferencePage.Error_invalid_message=The binary path specified is not valid. Please choose a valid binary.
-ValgrindPreferencePage.Error_invalid_title=Invalid Binary Path
