@@ -1,3 +1,10 @@
+2011-11-28 Otavio Pontes <obusatto@linux.vnet.ibm.com>
+
+	* plugin.xml:
+	Removing extension point related to ValgrindPreferencePage
+	* src/org/eclipse/linuxtools/internal/valgrind/core/messages.properties:
+	Removing extension point related to ValgrindPreferencePage
+
 2011-09-29 Otavio Pontes <obusatto@br.ibm.com>
 
 	Related to bug #353056
